# agocontrol

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.OSX  README.md  build_config.h.in
conf/: CMakeLists.txt  agoalert.init.in  agomeloware.init.in  agoowfs.init.in  agoresolver.init.in  agorrdtool.init.in  ipx800.init.in  mopidy.init.in  squeezebox.init.in
conf/conf.d/: CMakeLists.txt  plugwise.conf  rpc.conf.in  system.conf
conf/schema.d/: CMakeLists.txt
conf/systemd/: CMakeLists.txt  agoalert.service.in  agoasterisk.service.in  agoaxisaudiotransmit.service.in  agoenigma2.service.in  agoeta.service.in  agogammu.service.in  agogc100.service.in  agoipx800.service.in  agoiscp.service.in  agojointspace.service.in  agolifx.service.in  agomeloware.service.in  agomopidy.service.in  agomqtt.service.in  agoonvif.service.in  agoowfs.service.in  agoping.service.in  agoradiothermostat.service.in  agoraspi1wGPIO.service.in  agoraspiCamera.service.in  agoraspiGPIO.service.in  agoraspiMCP3xxxGPIO.service.in  agorrdtool.service.in  agoscheduler.service.in  agosimulator.service.in  agosqueezebox.service.in  agosqueezeboxserver.service.in  agotellstick.service.in  agotemperaturnu.service.in  agowake_on_lan.service.in  agoweatherreporter.service.in  agox10.service.in  template.service.in
conf/sysvinit/: CMakeLists.txt  agocontrol.in
core/: CMakeLists.txt
core/datalogger/: CMakeLists.txt  agodatalogger.cpp
core/event/: CMakeLists.txt  agoevent.cpp  bool.cpp
core/lua/: CMakeLists.txt  agolua.cpp
core/resolver/: CMakeLists.txt  agoresolver.cpp  inventory.cpp  inventory.h  schema.cpp  schema.h
core/rpc/: CMakeLists.txt  agorpc.cpp  get_table_lang.cpp  mergesrc.sh  mergetranslation.sh  rpc-htpasswd.cpp  test_agorpc.py  updatetranslations.sh
core/rpc/html/: .editorconfig  index.in.html  manifest.json
core/security/: CMakeLists.txt  agosecurity.cpp
core/system/: CMakeLists.txt  agosystem.cpp  agosystem.h  processinfo_freebsd.cpp  processinfo_linux.cpp  procps_debian_testing.patch
devices/: CMakeLists.txt  agosimulator.py  i2c_include.h
devices/1wire/: CMakeLists.txt  agoowfs.py
devices/ETAtouch/: CMakeLists.txt
devices/MQTT/: CMakeLists.txt
devices/MySensors/: CMakeLists.txt  MySensors.cpp  agoMySensors.cpp
devices/NVR/: CMakeLists.txt  frameprovider.cpp  frameprovider.h  nvr.cpp
devices/PLCBUS/: CMakeLists.txt  PLCBUS.cpp
devices/agoapc/: CMakeLists.txt
devices/agodmx/: CMakeLists.txt  agodmx.cpp
devices/agojointspace/: CMakeLists.txt
devices/agoping/: CMakeLists.txt  agoping.py
devices/alert/: CMakeLists.txt  agoalert.py  pushbullet.py
devices/asterisk/: CMakeLists.txt  agoasterisk.py
devices/axisaudiotransmit/: CMakeLists.txt
devices/blinkm/: CMakeLists.txt  agoblinkm.cpp
devices/chromoflex/: CMakeLists.txt  chromoflex.cpp
devices/enigma2/: CMakeLists.txt
devices/enocean3/: CMakeLists.txt  agoenocean3.cpp  esp3.cpp
devices/example/: CMakeLists.txt  example.cpp
devices/firmata/: CMakeLists.txt  agofirmata.cpp  arduino.cpp  arduino.h  firmata.cpp  firmata.h
devices/gammu/: CMakeLists.txt
devices/gc100/: CMakeLists.txt
devices/harmonyhub/: CMakeLists.txt
devices/i2c/: BMP085.c  CMakeLists.txt  agoi2c.cpp
devices/ipx800/: CMakeLists.txt  agoipx800.py  pyipx800v3.py
devices/irtrans_ethernet/: CMakeLists.txt  agoirtrans_ethernet.cpp
devices/knx/: CMakeLists.txt  Telegram.cpp  Telegram.h  agoknx.cpp
devices/kwikwai/: CMakeLists.txt  agokwikwai.cpp  kwikwai.cpp
devices/lifx/: CMakeLists.txt  agolifx.py  lifxbase.py  lifxlan2.py  lifxnet.py
devices/mbus/: CMakeLists.txt  mbus.cpp
devices/mbus_mqtt/: CMakeLists.txt  mbusmqtt.cpp
devices/mediaproxy/: agomediaproxy.cpp
devices/mopidy/: CMakeLists.txt
devices/netmetrics/: CMakeLists.txt  agonetmetrics.py
devices/onkyo/: CMakeLists.txt
devices/onvif/: CMakeLists.txt  agoonvif.py
devices/onvif-old/: onvif.cpp
devices/plugwise/: CMakeLists.txt  agoplugwise.cpp  agoplugwise.cpp.save
devices/rain8net/: CMakeLists.txt  agorain8net.cpp
devices/raspi1wGPIO/: CMakeLists.txt
devices/raspiCamera/: CMakeLists.txt  agoraspiCamera.py
devices/raspiGPIO/: CMakeLists.txt
devices/raspiMCP3xxxGPIO/: CMakeLists.txt
devices/rrdtool/: CMakeLists.txt  RRDtool.py
devices/scheduler/: CMakeLists.txt
devices/schedulerold/: CMakeLists.txt
devices/shvt250/: CMakeLists.txt  shvt250.cpp
devices/squeezebox/: CMakeLists.txt  agosqueezebox.py  pylmslibrary.py  pylmsplayer.py  pylmsplaylist.py  pylmsserver.py
devices/syslog/: CMakeLists.txt
devices/tellstick/: CMakeLists.txt  agotellstick.py  filter.py  readme.me  td.py  tellstick_auth.py  tellstickbase.py  tellstickduo.py  tellsticknet.py
devices/temperatur.nu/: CMakeLists.txt
devices/wake_on_lan/: CMakeLists.txt  pinger.py
devices/weatherreporter/: CMakeLists.txt  agoweatherreporter.py  readme.me
devices/webcam/: CMakeLists.txt  agowebcam.cpp
devices/x10/: CMakeLists.txt
devices/yamaha/: CMakeLists.txt  agoyamaha.cpp  yamaha_device.cpp  yamaha_device.h  yamaha_device_base.cpp  ynca_message.cpp
devices/zmcam/: CMakeLists.txt  agozmcam.cpp  zoneminderclient.cpp  zoneminderclient.h
devices/zwave/: CMakeLists.txt  ZWaveNode.cpp  ZWaveNode.h  agozwave.cpp
gateways/ImperiHome/: CMakeLists.txt  agoImperiHome.cpp
shared/: CMakeLists.txt  agoapp.cpp  agoapp.h  agoclient.cpp  agoclient.h  agoconfig.cpp  agoconfig.h  agoconnection-impl.h  agoconnection-mqtt.cpp  agoconnection-mqtt.h  agoconnection-qpid.cpp  agoconnection-qpid.h  agojson-qpid.cpp  agojson-qpid.h  agojson.cpp  agojson.h  agolog.cpp  agolog.h  agolog_basic.cpp  agolog_basic.h  agolog_boost.cpp  agolog_boost.h  agoproto.cpp  agoproto.h  agotransport-mqtt.cpp  agotransport-mqtt.h  agotransport-qpid.cpp  agotransport-qpid.h  agotransport.h  agoutils.cpp  agoutils.h
shared/agoclient/: agoapp.py  agoconnection.py
shared/agohttp/: CMakeLists.txt  agohttp.cpp  agohttp.h  agohttp_config.h.in
shared/jsoncpp/: jsoncpp.cpp
unittest/: CMakeLists.txt  run-pytest.sh
unittest/python/: test_config.py
unittest/shared/: test_agoconfig.cpp  test_agojson.cpp
(+203 files in other folders)
